--- a/index.html
+++ b/index.html
@@ -855,8 +855,7 @@ img.emoji {
 							</div>
 					<div class="site-info cww-flex">
 									<div class="footer-copyright">Mohammad Amaidul Islam Riyad</div>
-								<span class="sep"> | </span>
-					Theme: <a href="https://codeworkweb.com/themes/cww-portfolio" class="th-name">Smart Portfolio</a> by <a href="https://codeworkweb.com/">Code Work Web</a>.			</div>
+					</div>
 <!-- .site-info -->
 			</div>
 		</footer><!-- #colophon -->
